correction mobile

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -179,11 +179,6 @@
         height: 80px;
     }
 
-    .iconos-hc{
-        width: 60px;
-        height: 60px;
-    }
-
     .div-no-arrow{
         padding-top: 0px;
     }
